Meet: Fix chat scrolling
Summary: Auto-scroll to the bottom (until user manually moved the scrollbar)

Test Plan: `./phpunit`

Reviewers: #hkccp_developers, mollekopf

Reviewed By: #hkccp_developers, mollekopf

Subscribers: mollekopf, #hkccp_developers

Differential Revision: https://git.kolab.org/D2209

--- a/src/resources/themes/meet.scss
+++ b/src/resources/themes/meet.scss
@@ -251,6 +251,7 @@
     .chat {
         flex: 1;
         overflow-y: auto;
+        scrollbar-width: thin;
     }
 
     .message {
@@ -262,6 +263,10 @@
 
         &.self {
             background: lighten($main-color, 30%);
+        }
+
+        &:last-child {
+            margin-bottom: 0;
         }
     }
 
